plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
    //options.compilerArgs << "--enable-preview" << "-Xlint:unchecked" << "-Xlint:deprecation"
}

//application {
//    applicationDefaultJvmArgs = ['--enable-preview']
//}

jar {
    baseName = 'launcherfx'
    version = '0.0.1'
}

//tasks.run {
//    jvmArgs("--enable-preview")
//}

dependencies {
    implementation("org.ini4j:ini4j:0.5.4")
    implementation("javax.xml.bind:jaxb-api:2.3.0")
    implementation("org.apache.commons:commons-lang3:3.7")
}

javafx {
    modules = [ 'javafx.controls' ]
}

mainClassName = "com.goodjaerb.doom.launcherfx.Main"